# strava-bot-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app.rs  config.rs  main.rs
src/clients/: strava.rs
