[package]
name = "strava-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12.8", features = ["json"] }
tokio-cron-scheduler = "0.14.0"

[dev-dependencies]
